# office-helper

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  README_PT.md  README_RU.md  README_ZH.md  SECURITY.md  config.example.yaml  detector.py  gui.py  patcher.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: create_history.sh
