[project]
name = "office-helper"
version = "1.2.0"
description = "Office tool"
requires-python = ">=3.11"
tool = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
